cmake_minimum_required(VERSION 3.8.2)

project(liborbum CXX)

set(COMMON_SRC_FILES
	src/Common/Constants.hpp
	src/Common/Options.hpp
	src/Common/Types/Bitfield.hpp
	src/Common/Types/Bus/BusContext.hpp
	src/Common/Types/Bus/ByteBus.hpp
	src/Common/Types/Bus/ByteBusMappable.hpp
	src/Common/Types/FifoQueue/DmaFifoQueue.hpp
	src/Common/Types/FifoQueue/FifoQueue.cpp
	src/Common/Types/FifoQueue/FifoQueue.hpp
	src/Common/Types/FpuFlags.hpp
	src/Common/Types/Memory/ArrayByteMemory.cpp
	src/Common/Types/Memory/ArrayByteMemory.hpp
	src/Common/Types/Memory/ArrayHwordMemory.cpp
	src/Common/Types/Memory/ArrayHwordMemory.hpp
	src/Common/Types/Memory/ByteMemory.cpp
	src/Common/Types/Memory/ByteMemory.hpp
	src/Common/Types/Memory/HwordMemory.cpp
	src/Common/Types/Memory/HwordMemory.hpp
	src/Common/Types/Mips/BranchDelaySlot.hpp
	src/Common/Types/Mips/MipsCoprocessor.hpp
	src/Common/Types/Mips/MipsCoprocessor0.hpp
	src/Common/Types/Mips/MipsInstruction.hpp
	src/Common/Types/Mips/MipsInstructionInfo.hpp
	src/Common/Types/Mips/MmuAccess.hpp
	src/Common/Types/Primitive.hpp
	src/Common/Types/Register/ByteRegister.cpp
	src/Common/Types/Register/ByteRegister.hpp
	src/Common/Types/Register/DwordRegister.cpp
	src/Common/Types/Register/DwordRegister.hpp
	src/Common/Types/Register/HwordRegister.cpp
	src/Common/Types/Register/HwordRegister.hpp
	src/Common/Types/Register/MapperHwordWordRegister.cpp
	src/Common/Types/Register/MapperHwordWordRegister.hpp
	src/Common/Types/Register/QwordRegister.cpp
	src/Common/Types/Register/QwordRegister.hpp
	src/Common/Types/Register/SizedByteRegister.cpp
	src/Common/Types/Register/SizedByteRegister.hpp
	src/Common/Types/Register/SizedDwordRegister.cpp
	src/Common/Types/Register/SizedDwordRegister.hpp
	src/Common/Types/Register/SizedHwordRegister.cpp
	src/Common/Types/Register/SizedHwordRegister.hpp
	src/Common/Types/Register/SizedQwordRegister.cpp
	src/Common/Types/Register/SizedQwordRegister.hpp
	src/Common/Types/Register/SizedWordRegister.cpp
	src/Common/Types/Register/SizedWordRegister.hpp
	src/Common/Types/Register/WordRegister.cpp
	src/Common/Types/Register/WordRegister.hpp
	src/Common/Types/ScopeLock.hpp
	src/Common/Types/TranslationCache/TranslationCache.hpp
	src/Controller/CController.hpp
	src/Controller/Cdvd/CCdvd.cpp
	src/Controller/Cdvd/CCdvd.hpp
	src/Controller/Cdvd/CCdvd_SCMD.cpp
	src/Controller/ControllerEvent.hpp
	src/Controller/ControllerType.hpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter.hpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_ALU_OTHERS.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_BREAK_TRAP.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_CALL.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_COMPARE.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_COND_BRANCH_JUMP.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_COP2.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_DFC.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_FLOAT.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_INTEGER_ADD_SUB.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_INTEGER_MULT_ADD.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_INTEGER_MULT_DIV.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_LOAD_MEM.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_LOGICAL.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_MIN_MAX.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_OTHERS.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_REG_TRANSFER.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_REORDERING.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_SHIFT.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_SPECIAL_TRANSFER.cpp
	src/Controller/Ee/Core/Interpreter/CEeCoreInterpreter_STORE_MEM.cpp
	src/Controller/Ee/Dmac/CEeDmac.cpp
	src/Controller/Ee/Dmac/CEeDmac.hpp
	src/Controller/Ee/Dmac/CEeDmac_CHAIN.cpp
	src/Controller/Ee/Gif/CGif.cpp
	src/Controller/Ee/Gif/CGif.hpp
	src/Controller/Ee/Intc/CEeIntc.cpp
	src/Controller/Ee/Intc/CEeIntc.hpp
	src/Controller/Ee/Ipu/CIpu.cpp
	src/Controller/Ee/Ipu/CIpu.hpp
	src/Controller/Ee/Timers/CEeTimers.cpp
	src/Controller/Ee/Timers/CEeTimers.hpp
	src/Controller/Ee/Vpu/Vif/CVif.cpp
	src/Controller/Ee/Vpu/Vif/CVif.hpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter.hpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_CONVERT.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_EFU.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_FLAG.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_FLOAT.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_INTEGER.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_OTHER.cpp
	src/Controller/Ee/Vpu/Vu/Interpreter/CVuInterpreter_TRANSFER.cpp
	src/Controller/Gs/Core/CGsCore.cpp
	src/Controller/Gs/Core/CGsCore.hpp
	src/Controller/Gs/Crtc/CCrtc.cpp
	src/Controller/Gs/Crtc/CCrtc.hpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter.cpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter.hpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_ALU.cpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_BRANCH_JUMP.cpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_LOAD_STORE_MEM.cpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_OTHERS.cpp
	src/Controller/Iop/Core/Interpreter/CIopCoreInterpreter_SPECIAL_TRANSFER.cpp
	src/Controller/Iop/Dmac/CIopDmac.cpp
	src/Controller/Iop/Dmac/CIopDmac.hpp
	src/Controller/Iop/Intc/CIopIntc.cpp
	src/Controller/Iop/Intc/CIopIntc.hpp
	src/Controller/Iop/Sio0/CSio0.cpp
	src/Controller/Iop/Sio0/CSio0.hpp
	src/Controller/Iop/Sio2/CSio2.cpp
	src/Controller/Iop/Sio2/CSio2.hpp
	src/Controller/Iop/Timers/CIopTimers.cpp
	src/Controller/Iop/Timers/CIopTimers.hpp
	src/Controller/Spu2/CSpu2.cpp
	src/Controller/Spu2/CSpu2.hpp
	src/Core.cpp
	src/Core.hpp
	src/Resources/Cdvd/CdvdFifoQueues.cpp
	src/Resources/Cdvd/CdvdFifoQueues.hpp
	src/Resources/Cdvd/CdvdNvrams.cpp
	src/Resources/Cdvd/CdvdNvrams.hpp
	src/Resources/Cdvd/CdvdRegisters.cpp
	src/Resources/Cdvd/CdvdRegisters.hpp
	src/Resources/Cdvd/RCdvd.cpp
	src/Resources/Cdvd/RCdvd.hpp
	src/Resources/Ee/Core/EeCoreCop0.cpp
	src/Resources/Ee/Core/EeCoreCop0.hpp
	src/Resources/Ee/Core/EeCoreCop0Registers.cpp
	src/Resources/Ee/Core/EeCoreCop0Registers.hpp
	src/Resources/Ee/Core/EeCoreException.hpp
	src/Resources/Ee/Core/EeCoreFpu.cpp
	src/Resources/Ee/Core/EeCoreFpu.hpp
	src/Resources/Ee/Core/EeCoreFpuRegisters.cpp
	src/Resources/Ee/Core/EeCoreFpuRegisters.hpp
	src/Resources/Ee/Core/EeCoreInstruction.cpp
	src/Resources/Ee/Core/EeCoreInstruction.hpp
	src/Resources/Ee/Core/EeCoreR5900.cpp
	src/Resources/Ee/Core/EeCoreR5900.hpp
	src/Resources/Ee/Core/EeCoreTlb.cpp
	src/Resources/Ee/Core/EeCoreTlb.hpp
	src/Resources/Ee/Core/EeCoreTlbEntry.hpp
	src/Resources/Ee/Core/REeCore.cpp
	src/Resources/Ee/Core/REeCore.hpp
	src/Resources/Ee/Dmac/EeDmacChannelRegisters.cpp
	src/Resources/Ee/Dmac/EeDmacChannelRegisters.hpp
	src/Resources/Ee/Dmac/EeDmacChannels.hpp
	src/Resources/Ee/Dmac/EeDmacConstants.hpp
	src/Resources/Ee/Dmac/EeDmacRegisters.cpp
	src/Resources/Ee/Dmac/EeDmacRegisters.hpp
	src/Resources/Ee/Dmac/EeDmatag.hpp
	src/Resources/Ee/Dmac/REeDmac.cpp
	src/Resources/Ee/Dmac/REeDmac.hpp
	src/Resources/Ee/EeRegisters.cpp
	src/Resources/Ee/EeRegisters.hpp
	src/Resources/Ee/Gif/RGif.cpp
	src/Resources/Ee/Gif/RGif.hpp
	src/Resources/Ee/Intc/EeIntcConstants.hpp
	src/Resources/Ee/Intc/EeIntcRegisters.cpp
	src/Resources/Ee/Intc/EeIntcRegisters.hpp
	src/Resources/Ee/Intc/REeIntc.cpp
	src/Resources/Ee/Intc/REeIntc.hpp
	src/Resources/Ee/Ipu/RIpu.cpp
	src/Resources/Ee/Ipu/RIpu.hpp
	src/Resources/Ee/REe.cpp
	src/Resources/Ee/REe.hpp
	src/Resources/Ee/Timers/EeTimersUnitRegisters.cpp
	src/Resources/Ee/Timers/EeTimersUnitRegisters.hpp
	src/Resources/Ee/Timers/EeTimersUnits.cpp
	src/Resources/Ee/Timers/EeTimersUnits.hpp
	src/Resources/Ee/Timers/REeTimers.cpp
	src/Resources/Ee/Timers/REeTimers.hpp
	src/Resources/Ee/Vpu/RVpu.hpp
	src/Resources/Ee/Vpu/Vif/RVif.cpp
	src/Resources/Ee/Vpu/Vif/RVif.hpp
	src/Resources/Ee/Vpu/Vif/VifcodeInstruction.cpp
	src/Resources/Ee/Vpu/Vif/VifcodeInstruction.hpp
	src/Resources/Ee/Vpu/Vif/VifUnitRegisters.cpp
	src/Resources/Ee/Vpu/Vif/VifUnitRegisters.hpp
	src/Resources/Ee/Vpu/Vif/VifUnits.cpp
	src/Resources/Ee/Vpu/Vif/VifUnits.hpp
	src/Resources/Ee/Vpu/VpuRegisters.hpp
	src/Resources/Ee/Vpu/Vu/RVu.cpp
	src/Resources/Ee/Vpu/Vu/RVu.hpp
	src/Resources/Ee/Vpu/Vu/VuInstruction.hpp
	src/Resources/Ee/Vpu/Vu/VuRegisters.hpp
	src/Resources/Ee/Vpu/Vu/VuUnitRegisters.cpp
	src/Resources/Ee/Vpu/Vu/VuUnitRegisters.hpp
	src/Resources/Ee/Vpu/Vu/VuUnits.cpp
	src/Resources/Ee/Vpu/Vu/VuUnits.hpp
	src/Resources/Ee/Vpu/Vu/VuVectorField.cpp
	src/Resources/Ee/Vpu/Vu/VuVectorField.hpp
	src/Resources/Gs/Crtc/RCrtc.hpp
	src/Resources/Gs/RGs.cpp
	src/Resources/Gs/RGs.hpp
	src/Resources/Iop/Core/IopCoreCop0.cpp
	src/Resources/Iop/Core/IopCoreCop0.hpp
	src/Resources/Iop/Core/IopCoreCop0Registers.cpp
	src/Resources/Iop/Core/IopCoreCop0Registers.hpp
	src/Resources/Iop/Core/IopCoreException.hpp
	src/Resources/Iop/Core/IopCoreInstruction.cpp
	src/Resources/Iop/Core/IopCoreInstruction.hpp
	src/Resources/Iop/Core/IopCoreR3000.cpp
	src/Resources/Iop/Core/IopCoreR3000.hpp
	src/Resources/Iop/Core/RIopCore.cpp
	src/Resources/Iop/Core/RIopCore.hpp
	src/Resources/Iop/Dmac/IopDmacChannelRegisters.cpp
	src/Resources/Iop/Dmac/IopDmacChannelRegisters.hpp
	src/Resources/Iop/Dmac/IopDmacChannels.hpp
	src/Resources/Iop/Dmac/IopDmacConstants.hpp
	src/Resources/Iop/Dmac/IopDmacRegisters.cpp
	src/Resources/Iop/Dmac/IopDmacRegisters.hpp
	src/Resources/Iop/Dmac/IopDmatag.hpp
	src/Resources/Iop/Dmac/RIopDmac.cpp
	src/Resources/Iop/Dmac/RIopDmac.hpp
	src/Resources/Iop/Intc/IopIntcConstants.hpp
	src/Resources/Iop/Intc/IopIntcRegisters.cpp
	src/Resources/Iop/Intc/IopIntcRegisters.hpp
	src/Resources/Iop/Intc/RIopIntc.hpp
	src/Resources/Iop/RIop.cpp
	src/Resources/Iop/RIop.hpp
	src/Resources/Iop/Sio0/RSio0.hpp
	src/Resources/Iop/Sio0/Sio0Registers.cpp
	src/Resources/Iop/Sio0/Sio0Registers.hpp
	src/Resources/Iop/Sio2/RSio2.cpp
	src/Resources/Iop/Sio2/RSio2.hpp
	src/Resources/Iop/Sio2/Sio2Packet.hpp
	src/Resources/Iop/Sio2/Sio2Registers.cpp
	src/Resources/Iop/Sio2/Sio2Registers.hpp
	src/Resources/Iop/Timers/IopTimersUnitRegisters.cpp
	src/Resources/Iop/Timers/IopTimersUnitRegisters.hpp
	src/Resources/Iop/Timers/IopTimersUnits.cpp
	src/Resources/Iop/Timers/IopTimersUnits.hpp
	src/Resources/Iop/Timers/RIopTimers.cpp
	src/Resources/Iop/Timers/RIopTimers.hpp
	src/Resources/RResources.cpp
	src/Resources/RResources.hpp
	src/Resources/SbusFifoQueues.cpp
	src/Resources/SbusFifoQueues.hpp
	src/Resources/SbusRegisters.cpp
	src/Resources/SbusRegisters.hpp
	src/Resources/Spu2/RSpu2.cpp
	src/Resources/Spu2/RSpu2.hpp
	src/Resources/Spu2/Spu2CoreConstants.hpp
	src/Resources/Spu2/Spu2CoreRegisters.cpp
	src/Resources/Spu2/Spu2CoreRegisters.hpp
	src/Resources/Spu2/Spu2Cores.cpp
	src/Resources/Spu2/Spu2Cores.hpp
	src/Resources/Spu2/Spu2CoreVoice.hpp
	src/Resources/Spu2/Spu2CoreVoiceRegisters.hpp
	src/Resources/Spu2/Spu2Registers.cpp
	src/Resources/Spu2/Spu2Registers.hpp
	src/Utilities/Utilities.cpp
	src/Utilities/Utilities.hpp
)

add_library(liborbum ${COMMON_SRC_FILES})

# TODO: Sort out later into proper build configurations.
# Also disable MSVC non-safe copy warnings.
target_compile_definitions(
	liborbum PUBLIC 
	 "_SCL_SECURE_NO_WARNINGS"
	"BUILD_DEBUG"
)

target_include_directories(
	liborbum PUBLIC
	"${CMAKE_SOURCE_DIR}/project/liborbum/src"
	"${CMAKE_SOURCE_DIR}/project/utilities/src"
)

target_link_libraries(
	liborbum 
	PUBLIC
		Boost::boost
		Boost::filesystem
		Boost::log
)

install(
	TARGETS liborbum 
	ARCHIVE DESTINATION "lib/static"
	LIBRARY DESTINATION "lib"
)
